--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 .title{
-    background-image: url("../img/blog_main1.jpg");
+    background-image: url("img/blog_main1.jpg");
     display: flex;
     justify-content: center;
     align-items: center;
